2008-09-17 18:15-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSInfoPanel.m: Minor correction in initWithDictionary to 
	display url properly, if it is not specified in the dictionary passed
	or if the dictionary is nil.

2008-09-17 17:52-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSWorkspace.m: Exclude list of reserved mount names from
	the results returned by -mountedLocalVolumePaths.

2008-09-14 13:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* install.sh: Adding install script for use by compile-all.

2008-09-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSInfoPanel.m (-keyDown:, -copy:): Added functionality to
	copy the text content of the info panel to the pasteboard.
	Fixes #23831.

2008-09-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSavePanel.m (-browser:createRowsForColumn:inMatrix:):
	Use flushWindow instead of [GSCurrentContext() flushGraphics].
	Should fix #24200.

2008-09-08 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSCell.h: Move _sizeForBorderType to GSTheme.h
	* Headers/Additions/GNUstepGUI/GSTheme.h (-sizeForBorderType:,
	-drawBorderType:frame:view:, -sizeForImageFrameStyle:,
	-drawBorderForImageFrameStyle:frame:view:), 
	* Source/GSTheme.m: New methods. 
	* Source/NSCell.m (-cellSize, -drawingRectForBounds:,
	-_drawBorderAndBackgroundWithFrame:inView:),
	* Source/NSImageCell.m (-cellSize, -drawingRectForBounds:,
	-_drawBorderAndBackgroundWithFrame:inView:): Use new GSTheme methods.
	* Source/NSPopUpButtonCell.m: Include GSTheme.h
	* Source/NSButtonCell.m: Moved gradient drawing method to GSTheme
	and call it from _drawBorderAndBackgroundWithFrame:inView:.
	* Source/GSTheme.m (-drawGradientBorder:inRect:withClip:): New method. 
		
2008-09-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep+ICNS.m: Corrected last change.

2008-09-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep+ICNS.m: Change the incosistently named